<resources>
    <string name="app_name">McGillCv</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="fifth_fragment_label">Fifth Fragment</string>
    <string name="sixth_fragment_label">Sixth Fragment</string>
    <string name="seventh_fragment_label">Seventh Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello McGill!</string>
    <string name="hello_second_fragment">Only GPA and selecting a language are mandatory</string>

    <string-array name="major">
        <item>Select your Major</item>
        <item>Software Eng</item>
        <item>Computer Eng</item>
        <item>Computer Science</item>
    </string-array>

    <string-array name="minor">
        <item>Select your Minor</item>
        <item>Software Eng</item>
        <item>Computer Eng</item>
        <item>Computer Science</item>
    </string-array>

</resources>